# Virtual_Remote_software_Linux

./: .gitignore  CMakeLists.txt  LICENSE  README.md
backups/revert_20260430_133959/: changes.patch  mainwindow.cpp  server_main.cpp  server_main.h
core/include/: controller_engine.h  discovery_protocol.h  discovery_service.h  server_main.h  udp_receiver.h  utils.h
core/src/: controller_engine.cpp  discovery_service.cpp  server_main.cpp  udp_receiver.cpp  utils.cpp  virtual_gamepad.cpp
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: controller_engine.h  discovery_service.h  gamepad_mapping.h  protocol.h  virtual_gamepad.h
src/: controller_engine.cpp  controller_engine.h  discover_client.cpp  discovery_protocol.h  discovery_service.cpp  discovery_service.h  gamepad_mapping.h  rumble_manager.cpp  rumble_manager.h  send_test_packet.cpp  server_main.cpp  tcp_feedback_server.cpp  tcp_feedback_server.h  udp_receiver.cpp  udp_receiver.h  virtual_gamepad.cpp  virtual_gamepad.h
